# serializer version: 1
# name: test_all_entities[select.nursery_yoto_day_ambient_light_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'sky_blue',
        'apple_green',
        'lilac',
        'tambourine_red',
        'orange_peel',
        'bumblebee_yellow',
        'white',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.nursery_yoto_day_ambient_light_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day ambient light color',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day ambient light color',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_ambient_color',
    'unique_id': 'player-test_day_ambient_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.nursery_yoto_day_ambient_light_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Day ambient light color',
      'options': list([
        'sky_blue',
        'apple_green',
        'lilac',
        'tambourine_red',
        'orange_peel',
        'bumblebee_yellow',
        'white',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.nursery_yoto_day_ambient_light_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sky_blue',
  })
# ---
# name: test_all_entities[select.nursery_yoto_night_ambient_light_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'sky_blue',
        'apple_green',
        'lilac',
        'tambourine_red',
        'orange_peel',
        'bumblebee_yellow',
        'white',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.nursery_yoto_night_ambient_light_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night ambient light color',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night ambient light color',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_ambient_color',
    'unique_id': 'player-test_night_ambient_color',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.nursery_yoto_night_ambient_light_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Night ambient light color',
      'options': list([
        'sky_blue',
        'apple_green',
        'lilac',
        'tambourine_red',
        'orange_peel',
        'bumblebee_yellow',
        'white',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.nursery_yoto_night_ambient_light_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
